Contract Configurator 1.12.2
- Removed ConfiguredContract entries from settings menu (thanks Deimos Rast).
- Fixed isuse with SpawnVessels spawning vessels with incorrect rotation (thanks severedsolo).
- Prevent Rendenzvous parameter from triggering when a vessel performs a rendezvous with itself (thanks danielguo).

Contract Configurator 1.12.1
- Fixed backwards compatibility for Wheel PartModuleType (thanks TheReadPanda).

Contract Configurator 1.12.0
- Added support for NextKerbalHireCost() expression function.
- Added HasCrew.excludeKerbal.
- Fixed exception in the Expression behaviour (thanks severedsolo).
- Fixed deriving primary situation for biomes with a space in the name.
- Fixed exception in science util functions (thanks Chippy the Space Dog).
- Fixed exception when docking (thanks Lennartos and others).
- Fixed logic for setting contract weights that was broken by 1.1.x changes (thanks severedsolo).
- Removed some broken validation (thanks linuxgurugamer).
- Fixed exception when removing certain contract packs (thanks rasta013).
- Fixed edge case where AwardExperience was late awarding the experience (thanks severedsolo).
- Fixed exception with Contracts Window + (thanks sidfu).
- Improved accuracy of VesselNotDestroyed checks (thanks inigma).
- Fixed bug in barycenter logic when using Sigma Binary (thanks sentania).
- Improved backwards compatibility with contract packs using the old Wheel module name (thanks galenmacil).
- Re-generate PQS offset coordinates when flight begins (workaround for Kopernicus waypoint offset issue).

Contract Configurator 1.11.5
- Fixed exception when recovering vessel (thanks BluK).
- Recompile to RemoteTech 1.7.0.

Contract Configurator 1.11.4
- Clean up some "Input is null" errors/warnings.
- Deprecated VesselParameterDelegator.
- Remove support for ancient versions of Module Manager.

Contract Configurator 1.11.3
- Revert additional check added in 1.11.0 that broke PartModuleTypeUnlocked (thanks KnotaiG).