@@ -2,6 +2,7 @@ Contract Configurator 1.12.2
 - Removed ConfiguredContract entries from settings menu (thanks Deimos Rast).
 - Fixed isuse with SpawnVessels spawning vessels with incorrect rotation (thanks severedsolo).
 - Prevent Rendenzvous parameter from triggering when a vessel performs a rendezvous with itself (thanks danielguo).
+- Fixed NRE on contract accept when using SpawnVessel's craftPart method of spawning.
 
 Contract Configurator 1.12.1
 - Fixed backwards compatibility for Wheel PartModuleType (thanks TheReadPanda).
